--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script type="module" src="/src/main.jsx"></script>
 
   <meta charset="UTF-8">
-  <title>Sifu.com</title>
+  <title>skibidi</title>
 
 </head>
 <body>
