chore: Update page title, import statements, and add Tailwind CSS styled component

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <script type="module" src="/src/main.jsx"></script>
+  <link rel="stylesheet"  href="src/index.css">
 
   <meta charset="UTF-8">
   <title>skibidi</title>
+
+  
 
 </head>
 <body>
