chore: Update Tailwind CSS configuration and add dark theme toggle  UI option

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="cupcake">
 <head>
   <script type="module" src="/src/main.jsx"></script>
   <link rel="stylesheet"  href="src/index.css">
@@ -8,9 +8,11 @@
   <title>skibidi</title>
 
   
+  
 
 </head>
 <body>
   <div id="root"></div>
+  <h1>helo</h1>
 </body>
 </html>
