chore: Update Tailwind CSS configuration, add dark theme toggle UI option, and refactor components

--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="cupcake">
-<head>
+<head id="header">
   <script type="module" src="/src/main.jsx"></script>
-  <link rel="stylesheet"  href="src/index.css">
-
+  <link rel="stylesheet" href="src/index.css">
   <meta charset="UTF-8">
   <title>skibidi</title>
-
-  
-  
-
 </head>
-<body>
+<body >
   <div id="root"></div>
   <h1>helo</h1>
 </body>
