--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script type="module" src="/src/main.jsx"></script>
   <link rel="stylesheet" href="src/index.css">
   <meta charset="UTF-8">
-  <title>skibidi</title>
+  <title>HyperTester</title>
 </head>
 <body >
   <div id="root"></div>
